# docs/swagger.yaml
@@ -8,6 +8,30 @@ definitions:
         description: 最小面积（单位：平方米）
         type: number
     type: object
+  entity.DepartmentRequest:
+    properties:
+      email:
+        description: 邮箱
+        type: string
+      enable:
+        description: 是否启用
+        type: boolean
+      leading:
+        description: 负责人
+        type: string
+      name:
+        description: 部门名称
+        type: string
+      parent_id:
+        description: 上级ID 0为最顶级
+        type: integer
+      phone:
+        description: 联系电话
+        type: string
+      sort:
+        description: 显示排序
+        type: integer
+    type: object
   entity.EditUser:
     properties:
       QQ:
@@ -56,6 +80,21 @@ definitions:
         description: 行业排序 越大越靠前
         type: integer
     type: object
+  entity.PostRequest:
+    properties:
+      code:
+        description: 岗位编码
+        type: string
+      enable:
+        description: 是否启用
+        type: boolean
+      name:
+        description: 岗位名称
+        type: string
+      sort:
+        description: 显示排序
+        type: integer
+    type: object
   entity.RentTypeRequest:
     properties:
       max_rent:
@@ -77,6 +116,32 @@ definitions:
       status:
         description: 成功失败标志；true：成功 、false：失败
         type: boolean
+    type: object
+  entity.RoleRequest:
+    properties:
+      enable:
+        description: 是否启用
+        type: boolean
+      menu_powers:
+        description: 菜单权限
+        items:
+          $ref: '#/definitions/entity.RoleRequestMenuPower'
+        type: array
+      name:
+        description: 角色名称
+        type: string
+      sort:
+        description: 显示排序
+        type: integer
+    type: object
+  entity.RoleRequestMenuPower:
+    properties:
+      menu_id:
+        description: 菜单ID
+        type: integer
+      menu_title:
+        description: 菜单标题
+        type: string
     type: object
   entity.StoreTypeRequest:
     properties:
@@ -226,6 +291,29 @@ paths:
       summary: 删除面积分类
       tags:
       - 后台
+  /api/v1/admin/department:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/entity.DepartmentRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/entity.ResponseData'
+      security:
+      - ApiKeyAuth: []
+      summary: 添加部门
+      tags:
+      - 后台
   /api/v1/admin/industry:
     post:
       consumes:
@@ -320,6 +408,29 @@ paths:
       summary: 用户登录
       tags:
       - 后台
+  /api/v1/admin/post:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/entity.PostRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/entity.ResponseData'
+      security:
+      - ApiKeyAuth: []
+      summary: 添加岗位
+      tags:
+      - 后台
   /api/v1/admin/rentType:
     post:
       consumes:
@@ -391,6 +502,29 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 删除租金分类
+      tags:
+      - 后台
+  /api/v1/admin/role:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/entity.RoleRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            $ref: '#/definitions/entity.ResponseData'
+      security:
+      - ApiKeyAuth: []
+      summary: 添加角色
       tags:
       - 后台
   /api/v1/admin/storeType:
